fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -107,10 +107,6 @@ a,
   cursor: url(./cursors/aerowedge.cur), pointer;
 }
 
-.links a {
-  margin-right: -4px;
-}
-
 .name {
   font-size: 40px;
   margin-bottom: 40px;
